@@ -1,3 +1,7 @@
+2006-11-09  OHASHI Akira  <bg66@koka-in.org>
+
+	* mixi.el (mixi-make-friend-from-url): Support my object.
+
 2006-11-08  OHASHI Akira  <bg66@koka-in.org>
 
 	* mixi.el (mixi-friend-realize): Don't remove markup.
